# libunistd

./: .gitignore  Makefile.am  README  acinclude.m4  configure.ac  fcntl.h  gen-syscalls.pl  getopt.c  p_libunistd.h  regen-acinclude.sh  signal.h  sync.c  syscall-nums.h  syscalls.conf  syscalls.m4  test.pl  tests.conf  unistd.h  write.c
darwin/: Makefile.am
darwin/x86-64/: Makefile.am  _exit.S  access.S  chdir.S  chmod.S  chown.S  close.S  dup.S  dup2.S  errno.c  execve.S  fchdir.S  fchmod.S  fchown.S  fcntl.S  fdatasync.S  fork.S  fpathconf.S  fstat.S  fsync.S  ftruncate.S  getegid.S  geteuid.S  getgid.S  getgroups.S  getlogin.S  getpgid.S  getpgrp.S  getpid.S  getppid.S  getsid.S  getuid.S  lchown.S  link.S  lseek.S  lstat.S  mkdir.S  mkfifo.S  mknod.S  open.S  (+26 more)
linux/x86-64/: Makefile.am  _exit.S  access.S  alarm.S  chdir.S  chown.S  close.S  dup.S  dup2.S  errno.c  execve.S  fchdir.S  fchown.S  fdatasync.S  fork.S  fsync.S  ftruncate.S  getcwd.S  getegid.S  geteuid.S  getgid.S  getgroups.S  getpgid.S  getpgrp.S  getpid.S  getppid.S  getsid.S  getuid.S  lchown.S  link.S  lseek.S  p_callnums.h  p_libsyscalls.h  pause.S  pipe.S  readlink.S  rmdir.S  setgid.S  setpgid.S  setregid.S  (+10 more)
stubs/: Makefile.am  access.c  alarm.c  close.c  open.c  sync.c  unlink.c  write.c
sys/: stat.h
t/: .gitignore  Makefile.am  dprintf.c  open-1.c  unlink-1.c  write-1.c  write-2.c
ux/: Makefile.am
ux/darwin/: Makefile.am  fcntl.h  unistd.h
ux/linux/: Makefile.am  fcntl.h  unistd.h
